--- a/RelatorioPMAIIS/RelatoriosPMAEjb/.settings/org.eclipse.wst.common.component
+++ b/RelatorioPMAIIS/RelatoriosPMAEjb/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="RelatoriosPMAEjb">
+    <wb-module deploy-name="RelatoriosPMAEjbIIS">
         <wb-resource deploy-path="/" source-path="/ejbModule" tag="defaultRootSource"/>
-        <property name="java-output-path" value="/RelatoriosPMAEjb/build/classes"/>
+        <property name="java-output-path" value="/RelatoriosPMAEjbIIS/build/classes"/>
     </wb-module>
 </project-modules>
